--- a/apps/backend/swagger/routes/components/processors.yaml
+++ b/apps/backend/swagger/routes/components/processors.yaml
@@ -22,11 +22,13 @@ processors:
                                         type: integer
                                         description: ID of the Processor.
                                     data:
-                                        $ref: "../../components.schemas.yaml#/components/schemas/ProcessorDTO"
-                                    component:
-                                        $ref: "../../components.schemas.yaml#/components/schemas/ComponentDTO"
+                                        $ref: "../../openapi.yaml#/components/schemas/ProcessorDTO"
+            "400":
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
+            "404":
+                $ref: "../../openapi.yaml#/components/responses/NotFoundErrorResponse"
             "500":
-                $ref: "../../components.responses.yaml#/components/responses/ServerSideError"
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
         security:
             - sessionCookie: []
     post:
@@ -35,14 +37,14 @@ processors:
             content:
                 application/json:
                     schema:
-                        $ref: "../../components.schemas.yaml#/components/schemas/ProcessorDTO"
+                        $ref: "../../openapi.yaml#/components/schemas/ProcessorDTO"
         responses:
             "200":
-                $ref: "../../components.responses.yaml#/components/responses/Success"
+                $ref: "../../openapi.yaml#/components/responses/SuccessResponse"
             "400":
-                $ref: "../../components.responses.yaml#/components/responses/BadRequestError"
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
             "500":
-                $ref: "../../components.responses.yaml#/components/responses/ServerSideError"
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
         security:
             - sessionCookie: []
 processorsProcessorId:
@@ -67,10 +69,10 @@ processorsProcessorId:
                                     type: integer
                                     description: ID of the Processor.
                                 data:
-                                    $ref: "../../components.schemas.yaml#/components/schemas/ProcessorDTO"
-                                component:
-                                    $ref: "../../components.schemas.yaml#/components/schemas/ComponentDTO"
+                                    $ref: "../../openapi.yaml#/components/schemas/ProcessorDTO"
+            "400":
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
             "404":
-                $ref: "../../components.responses.yaml#/components/responses/NotFoundError"
+                $ref: "../../openapi.yaml#/components/responses/NotFoundErrorResponse"
             "500":
-                $ref: "../../components.responses.yaml#/components/responses/ServerSideError"
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
