--- a/apps/backend/swagger/schemas/user/UserDTO.yaml
+++ b/apps/backend/swagger/schemas/user/UserDTO.yaml
@@ -9,7 +9,7 @@ properties:
         type: string
         format: email
     userType:
-        $ref: '../../openapi.yaml#/components/schemas/UserType'
+        $ref: "../../openapi.yaml#/components/schemas/UserType"
 required:
     - id
     - username
