--- a/apps/backend/swagger/schemas/user/UserUpdateDTO.yaml
+++ b/apps/backend/swagger/schemas/user/UserUpdateDTO.yaml
@@ -11,7 +11,7 @@ properties:
     password:
         type: string
     userType:
-        $ref: '../../openapi.yaml#/components/schemas/UserType'
+        $ref: "../../openapi.yaml#/components/schemas/UserType"
 required:
     - id
     - username
