--- a/apps/backend/swagger/responses/NotFoundErrorResponse.yaml
+++ b/apps/backend/swagger/responses/NotFoundErrorResponse.yaml
@@ -2,4 +2,4 @@ description: element not found.
 content:
     application/json:
         schema:
-            $ref: '../openapi.yaml#/components/schemas/NotFoundError'
+            $ref: "../openapi.yaml#/components/schemas/NotFoundError"
