feat: added required files to some missing schemas

--- a/apps/backend/swagger/schemas/components/GPUDTO.yaml
+++ b/apps/backend/swagger/schemas/components/GPUDTO.yaml
@@ -8,3 +8,8 @@ properties:
         type: string
     power:
         type: integer
+required:
+    - memory
+    - powerConnector
+    - interface
+    - power
